# election-forensics-eu2024

./: ARCHITECTURE_RATIONALE.md  CODEX_STRUCTURED_TASK_GUIDE.md  EPISTEMIC_STATEMENT.md  README.md  RESEARCH_GAP_DEFINITION.md  RESEARCH_GAP_RULES.yaml  pyproject.toml
.github/workflows/: ci.yml
data/metadata/: mappings.yaml  reliability.yaml  sources.yaml
experiments/: gap_validation_template.yaml
experiments/gaps/: gap_validation_template.yaml
literature/: deduplication_policy.yaml  exclusion_criteria.yaml  gap_agents.yaml  gap_templates.yaml  harvesting_scope.md  harvesting_sources.yaml  literature_registry.yaml  method_taxonomy.yaml
methods/spatial/: graph_builders.py
pipelines/: build_figures.py  derive_gap_math.py  evaluate_experiments.py  generate_gaps.py  harvest_literature.py  ingest_literature.py
tests/: test_graph_builders.py
