[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "election-forensics-eu2024"
version = "0.1.0"
description = "Deterministic baseline election forensics metrics (EU 2024)"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }

authors = [
  { name = "Your Name" }
]

dependencies = [
  "numpy>=1.24",
  "scipy>=1.11"
]

[project.optional-dependencies]
dev = [
  "pytest>=7.4",
  "pytest-cov>=4.1",
  "coverage>=7.3"
]

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools.package-data]
election_forensics = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
